--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-google-genai
-deepgram-sdk
-python-dotenv
-aiohttp
-websockets
+fastapi>=0.115.0
+uvicorn[standard]>=0.30.0
+python-dotenv>=1.0.0
+loguru>=0.7.0
+aiohttp>=3.9.0
+google-genai>=1.0.0
+openai>=1.0.0
+python-multipart>=0.0.6
